<resources>
    <string name="app_name" translatable="false">AI Voice Chat</string>

    <string name="image_description" translatable="false">image</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="spoken_language">Spoken Language</string>

    <string name="ai_assistant">AI Assistant</string>
    <string name="ai_first_message">Hello! How can I help you today?</string>

    <string name="ai_first_message_en" translatable="false">Hello! How can I help you today?</string>
    <string name="ai_first_message_tr" translatable="false">Merhaba! Bugün size nasıl yardımcı olabilirim?</string>
    <string name="ai_first_message_de" translatable="false">>Hallo! Wie kann ich Ihnen heute helfen?</string>
    <string name="ai_first_message_fr" translatable="false">Bonjour! Comment puis-je vous aider aujourd\'hui?</string>

    <string name="mic_permission_message_1">Microphone permission required</string>

    <string name="mic_warning_1">I didn\'t understand what you said</string>

    <string name="warning_message_1">Please check your internet connection</string>

    <string name="exit">EXIT</string>
    <string name="close">CLOSE</string>

    <string name="test_message_1" translatable="false">Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="test_message_2" translatable="false">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

</resources>